- Tailwind now automatically knows theme mode instead of improting it from ThemeContext and passing conditional classes based on "isDark". - Fixed DataTable resizing issue and content overflowing from columns.

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,4 +1,7 @@
 @import "tailwindcss";
+@config "../tailwind.config.js";
+
+@variant dark (&:where(.dark, .dark *));
 
 :root {
   --font-geist-sans: var(--font-dm-sans), "Segoe UI", "Helvetica Neue", Arial, sans-serif;
@@ -11,12 +14,9 @@
   /* indigo-600 */
   --primary-hover: #4338ca;
   /* indigo-700 */
-  --primary-rgb: 79, 70, 229;
   --primary-text: #ffffff;
-
   --secondary: #ffece2;
   --secondary-hover: #f1f5f9;
-  --secondary-rgb: 255, 255, 255;
   --secondary-text: #0f172a;
 
   --neutral: #8A919E;
